# poma-chunker

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml
internal/tools/builder/: setup.py
src/poma_chunker/: .gitignore  chunker.py  retrieval.py
tests/: test_import.py
